--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
 
   	<meta name="viewport" content="width=device-width,initial-scale=1">
 
-	<link href="https://fonts.googleapis.com/css?family=Comfortaa|Pacifico" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Baloo|Comfortaa" rel="stylesheet">
   	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
@@ -45,34 +45,39 @@
 		<div class="container-fluid main">
 			<div class="row">
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-					<p>It is currently growing season and our hops are growing strong! We will have Centennial, Cashmere, Cascade & Chinook hops available at harvest. Subscribe to our mailing list to be notified on availability.<br><br>Thanks for stopping by!</p>
-				</div>
-			</div>
-		</div>
-		<div class="container-fluid">
-			<!-- Hops -->
-			<div class="row">
-				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" style="padding:0 0 0 0;">
-					<img src="https://scontent-lax3-2.cdninstagram.com/t51.2885-15/e35/18095395_1104157043029209_6457145014962094080_n.jpg">
-				</div>
-				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" style="padding:0 0 0 0;">
-					<img src="https://scontent-lax3-2.cdninstagram.com/t51.2885-15/e35/14052300_293951180978248_2095291800_n.jpg">
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" style="padding:0 0 0 0;">
-					<img src="https://scontent-lax3-2.cdninstagram.com/t51.2885-15/e35/13712335_303998656619143_325524166_n.jpg">
-				</div>
-				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" style="padding:0 0 0 0;">
-					<img src="https://scontent-lax3-2.cdninstagram.com/t51.2885-15/e35/14073241_1151397821550160_821673331_n.jpg">
+				    <div class="form-area">  
+				        <form role="form" style="width:100%;">
+				        <br style="clear:both">
+				                    <h3 style="margin-bottom: 25px; text-align: center;">Interested in our hops? Shoot us a message. :)</h3>
+				    				<div class="form-group">
+										<input type="text" class="form-control" id="name" name="name" placeholder="Name" required>
+									</div>
+									<div class="form-group">
+										<input type="text" class="form-control" id="email" name="email" placeholder="Email" required>
+									</div>
+<!-- 									<div class="form-group">
+										<input type="text" class="form-control" id="mobile" name="mobile" placeholder="Mobile Number" required>
+									</div> -->
+									<div class="form-group">
+										<input type="text" class="form-control" id="subject" name="subject" placeholder="Subject" required>
+									</div>
+				                    <div class="form-group">
+				                    <textarea class="form-control" type="textarea" id="message" placeholder="Message" maxlength="140" rows="7"></textarea>
+<!-- 				                        <span class="help-block"><p id="characterLeft" class="help-block ">You have reached the limit</p></span>  -->                   
+				                    </div>     
+				        <button type="button" id="submit" name="submit" class="btn btn-primary pull-right" style="margin-bottom:5%;">Submit Form</button>
+				        </form>
+				    </div>
 				</div>
 			</div>
 		</div>
     </section>
 
-    <footer class="footer">
-			<p style="text-align:center;color:#555;margin:0;padding: 15px 0px;">&#169 Copyright 2016 CaliHop Farms | calihopfarms@gmail.com</p>
-    </footer>
+   	<div class="container-fluid" style="padding:0 0 0 0;">
+    	<footer class="footer" style="max-width:600px;background-color:#e7e7e7;">
+			<p style="text-align:center;color:#555;background-color:#e7e7e7;margin:0;padding: 15px 0px;">&#169 Copyright 2016 CaliHop Farms | calihopfarms@gmail.com</p>
+    	</footer>
+    </div>
 
 </body>
 
