--- a/hops.html
+++ b/hops.html
@@ -8,7 +8,7 @@
 
   	<meta name="viewport" content="width=device-width,initial-scale=1">
 
-	<link href="https://fonts.googleapis.com/css?family=Comfortaa|Pacifico" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Baloo|Comfortaa" rel="stylesheet">
   	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
@@ -70,9 +70,11 @@
 		</div>
     </section>
 
-    <footer class="footer">
-			<p style="text-align:center;color:#555;margin:0;padding: 15px 0px;">&#169 Copyright 2016 CaliHop Farms | calihopfarms@gmail.com</p>
-    </footer>
+    <div class="container-fluid" style="padding:0 0 0 0;">
+    	<footer class="footer" style="max-width:600px;background-color:#e7e7e7;">
+			<p style="text-align:center;color:#555;background-color:#e7e7e7;margin:0;padding: 15px 0px;">&#169 Copyright 2016 CaliHop Farms | calihopfarms@gmail.com</p>
+    	</footer>
+    </div>
 
 </body>
 
