added hop varities page

--- a/hops.html
+++ b/hops.html
@@ -45,7 +45,7 @@
 		<div class="container-fluid main">
 			<div class="row">
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-					<p>It is currently growing season and our hops are growing strong! We will have Centennial, Cashmere, Cascade & Chinook hops available at harvest. Subscribe to our mailing list to be notified on availability.<br><br>Thanks for stopping by!</p>
+					<p>We are currently on our second year, growing 4 varieties.</p>
 				</div>
 			</div>
 		</div>
@@ -53,18 +53,18 @@
 			<!-- Hops -->
 			<div class="row">
 				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" style="padding:0 0 0 0;">
-					<img src="https://scontent-lax3-2.cdninstagram.com/t51.2885-15/e35/18095395_1104157043029209_6457145014962094080_n.jpg">
+					<img src="https://s-media-cache-ak0.pinimg.com/236x/62/7e/6a/627e6a47869e59a6ca55cba266f26b20.jpg">
 				</div>
 				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" style="padding:0 0 0 0;">
-					<img src="https://scontent-lax3-2.cdninstagram.com/t51.2885-15/e35/14052300_293951180978248_2095291800_n.jpg">
+					<img src="https://s-media-cache-ak0.pinimg.com/236x/62/7e/6a/627e6a47869e59a6ca55cba266f26b20.jpg">
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" style="padding:0 0 0 0;">
-					<img src="https://scontent-lax3-2.cdninstagram.com/t51.2885-15/e35/13712335_303998656619143_325524166_n.jpg">
+					<img src="https://s-media-cache-ak0.pinimg.com/236x/62/7e/6a/627e6a47869e59a6ca55cba266f26b20.jpg">
 				</div>
 				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" style="padding:0 0 0 0;">
-					<img src="https://scontent-lax3-2.cdninstagram.com/t51.2885-15/e35/14073241_1151397821550160_821673331_n.jpg">
+					<img src="https://s-media-cache-ak0.pinimg.com/236x/62/7e/6a/627e6a47869e59a6ca55cba266f26b20.jpg">
 				</div>
 			</div>
 		</div>
