--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@
 				    <div class="form-area">  
 				        <form role="form" style="width:100%;">
 				        <br style="clear:both">
-				                    <h3 style="margin-bottom: 25px; text-align: center;">Interested in our hops? Shoot us a message. :)</h3>
+				                    <h3 style="margin-bottom: 25px; text-align: center;">Interested in our hops? Shoot us a message!</h3>
 				    				<div class="form-group">
 										<input type="text" class="form-control" id="name" name="name" placeholder="Name" required>
 									</div>
