styled submit button

--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
 						<span class="icon-bar"></span> 
 						<span class="icon-bar"></span> 
 					</button> 
-					<a href="#" class="navbar-brand" style="font-size: 150%;">CaliHop Farms</a> 
+					<a href="index.html" class="navbar-brand" style="font-size: 150%;">CaliHop Farms</a> 
 				</div>	
 				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-8"> 
 					<ul class="nav navbar-nav navbar-right"> 
@@ -65,7 +65,7 @@
 				                    <textarea class="form-control" type="textarea" id="message" placeholder="Message" maxlength="140" rows="7"></textarea>
 <!-- 				                        <span class="help-block"><p id="characterLeft" class="help-block ">You have reached the limit</p></span>  -->                   
 				                    </div>     
-				        <button type="button" id="submit" name="submit" class="btn btn-primary pull-right" style="margin-bottom:5%;">Submit Form</button>
+				        <button type="button" id="submit" name="submit" class="btn btn-warning pull-right" style="margin-bottom:5%;">Submit Form</button>
 				        </form>
 				    </div>
 				</div>
