--- a/hops.html
+++ b/hops.html
@@ -27,7 +27,7 @@
 						<span class="icon-bar"></span> 
 						<span class="icon-bar"></span> 
 					</button> 
-					<a href="#" class="navbar-brand" style="font-size: 150%;">CaliHop Farms</a> 
+					<a href="index.html" class="navbar-brand" style="font-size: 150%;">CaliHop Farms</a> 
 				</div>	
 				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-8"> 
 					<ul class="nav navbar-nav navbar-right"> 
