added titles to varities

--- a/hops.html
+++ b/hops.html
@@ -54,17 +54,21 @@
 			<div class="row">
 				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" style="padding:0 0 0 0;">
 					<img src="https://s-media-cache-ak0.pinimg.com/236x/62/7e/6a/627e6a47869e59a6ca55cba266f26b20.jpg">
+					<h3 align="center">Chinook</h3>
 				</div>
 				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" style="padding:0 0 0 0;">
 					<img src="https://s-media-cache-ak0.pinimg.com/236x/62/7e/6a/627e6a47869e59a6ca55cba266f26b20.jpg">
+					<h3 align="center">Centennial</h3>
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" style="padding:0 0 0 0;">
 					<img src="https://s-media-cache-ak0.pinimg.com/236x/62/7e/6a/627e6a47869e59a6ca55cba266f26b20.jpg">
+					<h3 align="center">Cascade</h3>
 				</div>
 				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" style="padding:0 0 0 0;">
 					<img src="https://s-media-cache-ak0.pinimg.com/236x/62/7e/6a/627e6a47869e59a6ca55cba266f26b20.jpg">
+					<h3 align="center">Cashmere</h3>
 				</div>
 			</div>
 		</div>
