--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
   	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
+  	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  	<script src="assets/js/bootstrap.js" type="text/javascript"></script>
+
 </head>
 
 <body>
@@ -48,12 +51,29 @@
 					<p>It is currently growing season and our hops are growing strong! We will have Centennial, Cashmere, Cascade & Chinook hops available at harvest. Subscribe to our mailing list to be notified on availability.<br><br>Thanks for stopping by!</p>
 				</div>
 			</div>
+			<div class="row">
+				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="padding-bottom:20px;">
+					<!-- Begin MailChimp Signup Form -->	
+					<div id="mc_embed_signup">
+						<form action="//wordpress.us15.list-manage.com/subscribe/post?u=91822085215153948c52181ac&amp;id=9cd164a9f9" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+						    <div id="mc_embed_signup_scroll" align="center" style="font-family: 'Comfortaa', cursive;">
+							<label for="mce-EMAIL">Subscribe to our mailing list</label>
+							<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+						    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+						    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_91822085215153948c52181ac_9cd164a9f9" tabindex="-1" value=""></div>
+						    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+						    </div>
+						</form>
+					</div>
+					<!--End mc_embed_signup-->
+				</div>
+			</div>
 		</div>
 		<div class="container-fluid">
 			<!-- Hops -->
 			<div class="row">
 				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" style="padding:0 0 0 0;">
-					<img src="https://scontent-lax3-2.cdninstagram.com/t51.2885-15/e35/18095395_1104157043029209_6457145014962094080_n.jpg">
+					<img src="https://scontent-lax3-2.cdninstagram.com/t51.2885-15/e35/13712335_303998656619143_325524166_n.jpg">
 				</div>
 				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" style="padding:0 0 0 0;">
 					<img src="https://scontent-lax3-2.cdninstagram.com/t51.2885-15/e35/14052300_293951180978248_2095291800_n.jpg">
@@ -61,10 +81,10 @@
 			</div>
 			<div class="row">
 				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" style="padding:0 0 0 0;">
-					<img src="https://scontent-lax3-2.cdninstagram.com/t51.2885-15/e35/13712335_303998656619143_325524166_n.jpg">
+					<img src="https://scontent-lax3-2.cdninstagram.com/t51.2885-15/e35/14073241_1151397821550160_821673331_n.jpg">
 				</div>
 				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" style="padding:0 0 0 0;">
-					<img src="https://scontent-lax3-2.cdninstagram.com/t51.2885-15/e35/14073241_1151397821550160_821673331_n.jpg">
+					<img src="https://scontent-lax3-2.cdninstagram.com/t51.2885-15/e35/14073238_1809115795986461_82432371_n.jpg">
 				</div>
 			</div>
 		</div>
